package com.mycompany.proyectoprograii.Model;

public interface ISala{
    String obtenerId();
    int contarAsientosDisponibles();
}